--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 <body>
   <section id="toolbar" style="z-index:1000"></section>
   <section id="container" style="z-index:1;padding-top:56px"></section>
+  <footer style="padding:8px 16px;">
+    <p>本ツールの計算結果を用いた際の責任は負いかねます。詳しくは<a href="https://www.nta.go.jp/taxanswer/gensen/gensen35.htm">国税庁のサイト<a>をご覧ください</p>
+    <address><a href="https://mokelab.com">2016 Mokelab inc</a></a>
+  </footer>
 
   <script id="topTemplate" type="text/ractive">
-    <table style="position:absolute; left:0; right:0; margin: 8px 0px;"> 
+    <table>
     <thead>
       <tr><th></th><th>金額</th><th>計算方法</th></tr>
     </thead>
